--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <caption>마리오[Mario mario]</caption>
                 <tr>
                     <td>이미지</td>
-                    <td><img src="https://ww.namu.la/s/8c4c2f5028951a1728e32238f70b1926b6831c22974ca59ab9b207aea02092b40e5c499f0e10194643f341fa4167b3a442d15808e436c3a6296e9c6e8f8f792e43697afd6649b1c75a56c988998f9a2394325ae11afbeaf681346f0c3e95c117fb1e8158d2a7cbf77657a2fa524da433" width="50%"></td>
+                    <td><img src="./pic/mario.png" width="50%"></td>
                     
                 </tr>
                 <tr>
